fixed bug: about static page sign up button was hidden in overflow, due to overflow: auto being set. Removed overflow:auto and created an id for specific div I wanted to overflow:auto.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,6 +31,10 @@ textarea
 .center 
 {
   text-align: center;
+}
+
+#hero-unit
+{
   overflow: auto;
 }
 
